footer primera parte

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         </li>
     </ul>
     </nav>
-
+    <footer>
+      <ul class="links_contact">
+        <li><a href="">GitHub</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Examples</a></li>
+        <li><a href="">About</a></li>
+      </ul>
+      <p>Diseñado y construido con amor por @Intelectuales. 2017</p>
+      <p>Version 1.0</p>
+    </footer>
   </body>
 </html>
