--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </nav>
     <footer>
       <ul class="links_contact">
-        <li><a href="">GitHub</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Examples</a></li>
-        <li><a href="">About</a></li>
+        <li><a id="lista" class="contact_li" href="">GitHub</a></li>
+        <li><a class="contact_li" href="">Twitter</a></li>
+        <li><a class="contact_li" href="">Examples</a></li>
+        <li><a class="contact_li" href="">About</a></li>
       </ul>
       <p>Diseñado y construido con amor por @Intelectuales. 2017</p>
       <p>Version 1.0</p>
