--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bootstrap Intelectuales</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-          <li><a href="">Boostrap</a></li>
-          <li><a href="">Getting Started</a></li>
-          <li><a href="">CSS</a></li>
-          <li><a href="">Components</a></li>
-          <li><a href="">JavaScript</a></li>
-          <li><a href="">Costumize</a></li>        
-        <li>
-          <li><a href="">Themes</a></li>
-          <li><a href="">Expo</a></li>
-          <li><a href="">Blog</a></li>
-        </li>
+<head>
+  <meta charset="utf-8">
+  <title>Bootstrap Intelectuales</title>
+  <link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="">Boostrap</a></li>
+      <li><a href="">Getting Started</a></li>
+      <li><a href="">CSS</a></li>
+      <li><a href="">Components</a></li>
+      <li><a href="">JavaScript</a></li>
+      <li><a href="">Costumize</a></li>
+      <li>
+        <li><a href="">Themes</a></li>
+        <li><a href="">Expo</a></li>
+        <li><a href="">Blog</a></li>
+      </li>
     </ul>
-    </nav>
-    <footer>
-      <ul class="links_contact">
-        <li><a id="lista" class="contact_li" href="">GitHub</a></li>
-        <li><a class="contact_li" href="">Twitter</a></li>
-        <li><a class="contact_li" href="">Examples</a></li>
-        <li><a class="contact_li" href="">About</a></li>
-      </ul>
-      <p>Diseñado y construido con amor por @Intelectuales. 2017</p>
-      <p>Version 1.0</p>
-    </footer>
-  
+  </nav>
+  <div class="barra_morada">
+    <span class="b">B</span>
+    <p class="info">Bootstrap is the most popular HTML, CSS, and JS framework for <br>developing responsive, mobile first projects on the web.</p>
+    <button class="descarga" type="button" name="button">Download Bootstrap</button>
+  </div>
+  <footer>
+    <ul class="links_contact">
+      <li><a id="lista" class="contact_li" href="">GitHub</a></li>
+      <li><a class="contact_li" href="">Twitter</a></li>
+      <li><a class="contact_li" href="">Examples</a></li>
+      <li><a class="contact_li" href="">About</a></li>
+    </ul>
+    <p>Diseñado y construido con amor por @Intelectuales. 2017</p>
+    <p>Version 1.0</p>
+  </footer>
+</body>
+</html>
